refactor: code style and update tests